added some thumbnails, removed holder.js

--- a/bower.json
+++ b/bower.json
@@ -6,7 +6,7 @@
   "authors": [
     "chrisdevwords"
   ],
-  "description": "simple article list.",
+  "description": "full stack example of a simple article list with tag filtering.",
   "keywords": [
     "node"
   ],
